--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,4 +6,8 @@
     </style>
 
     <style name="Theme.IdeasConnect" parent="Base.Theme.IdeasConnect" />
+
+    <style name="ActivityWithActionBar" parent="Theme.Material3.DayNight">
+
+    </style>
 </resources>
