--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -22,7 +22,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal2"
-            app:srcCompat="@drawable/IdeasConnect2" />
+            app:srcCompat="@drawable/ideasconnectlogo2" />
 
         <TextView
             android:id="@+id/titleTextView"
