--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -115,6 +115,7 @@
             app:layout_constraintTop_toBottomOf="@+id/tv_date_label" />
 
         <Button
+            android:id="@+id/btn_offer_investment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginVertical="24dp"
