--- a/app/src/main/res/layout/activity_offer_investment.xml
+++ b/app/src/main/res/layout/activity_offer_investment.xml
@@ -127,6 +127,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
+        android:id="@+id/btn_offer_investment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginVertical="24dp"
