--- a/app/src/main/res/layout/activity_submit_idea.xml
+++ b/app/src/main/res/layout/activity_submit_idea.xml
@@ -11,7 +11,7 @@
         android:id="@+id/tv_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Submit Ide"
+        android:text="Masukkan Detail Ide Anda"
         android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
         android:layout_margin="24dp"
         app:layout_constraintEnd_toEndOf="parent"
